@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,19 +21,22 @@
  * questions.
  */
 
-// key: compiler.err.break.outside.switch.expression
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// options: --enable-preview -source ${jdk.version}
+/*
+ * @test
+ * @bug 8226876
+ * @summary Test CalendarDataUtility class not throwing AssertionError
+ * @run main/othervm -ea -esa -Djava.locale.providers=HOST CalendarDataRegression
+ */
 
-class BreakOutsideSwitchExpression {
-    int t(int i) {
-        OUT: while (true) {
-            return switch (i) {
-                case 0: break OUT;
-                default: yield 0;
-            };
-        }
-        return -1;
+import java.text.DateFormat;
+import java.util.Locale;
+
+public class CalendarDataRegression {
+    public static void main(String[] args) {
+        // Host locale provider on Windows returns 0 for
+        // firstDayOfWeek/minimalDaysInFirstWeek, which should
+        // default to non-zero value. Otherwise AssertionError
+        // will be thrown.
+        DateFormat.getDateInstance(DateFormat.FULL, Locale.US);
     }
 }
